Working on the responsiveness

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
        <img src="Assets/9253900.jpg" alt="My logo" class="logo"/>
       <div class="navlinks"> 
        <ul>
-        <li> <a href="#home">Home</a></li>
+        <li> <a href="#home" class="active">Home</a></li>
         <li><a href="#about">About Me</a></li>
         <li><a href="#services">Services</a></li>
         <li> <a href="#mywork">MyWork</a></li>
@@ -31,7 +31,7 @@
      <div class="sidebar">
          <button class="close-btn">&times;</button>
          <ul>
-             <li><a href="#home">Home</a></li>
+             <li><a href="#home" class="active">Home</a></li>
              <li><a href="#about">About Me</a></li>
              <li><a href="#services">Services</a></li>
              <li><a href="#mywork">My Work</a></li>
@@ -100,9 +100,9 @@
           <li> I have built more than 4 Projects </li>            
          
       </ul>
+     </div>
     </div>
-  </div>
-</div>
+   </div>
 
     <h3> Tools I use</h3>
    <div class="tools">
@@ -124,7 +124,7 @@
   </section>
 
 
-                                     <!-- Services section -->
+                                     <!-- Services/ What I offer section -->
 
     <section id="services">
       <div class="header">
