--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <div class="text-container">
             <h1>About Me</h1>
             <p>
-                I'm <strong>Victor Aseko</strong>, a Full Stack Developer based in <strong>Nairobi, Kenya</strong>. My journey began with frontend technologies like <strong>HTML, CSS, JavaScript, TypeScript, React, and React Native</strong>, but I soon developed a passion for backend development.
+                I'm <strong>Victor Aseko</strong>, a Junior Software Developer based in <strong>Nairobi, Kenya</strong>. My journey began with frontend technologies like <strong>HTML, CSS, JavaScript, TypeScript, React, and React Native</strong>, but I soon developed a passion for backend development.
             </p>
             <p style="color:#fff">
                 Currently, I work with Python, Node.js, Express.js, SQL, and MongoDB, and I am always eager to learn new technologies. Right now, I'm expanding my skill set by diving into <strong>NextJS</strong>.
